xpontus-current/src/net/sf/xpontus/view/editor/syntax/idl/IDLParser.java
/* Generated By:JavaCC: Do not edit this line. IDLParser.java */
package net.sf.xpontus.view.editor.syntax.idl;

import net.sf.xpontus.view.editor.ILexer;
import net.sf.xpontus.view.editor.syntax.CharStream;
import net.sf.xpontus.view.editor.syntax.FastCharStream;
import net.sf.xpontus.view.editor.syntax.ParseException;
import net.sf.xpontus.view.editor.syntax.Token;


public class IDLParser implements IDLParserConstants, ILexer
  {
    static private int[] jj_la1_0;
    static private int[] jj_la1_1;
    static private int[] jj_la1_2;

    static
      {
        jj_la1_0();
        jj_la1_1();
        jj_la1_2();
      }

    public IDLParserTokenManager token_source;
    public Token token;
    public Token jj_nt;
    private int jj_ntk;
    private Token jj_scanpos;
    private Token jj_lastpos;
    private int jj_la;
    public boolean lookingAhead = false;
    private boolean jj_semLA;
    private int jj_gen;
    final private int[] jj_la1 = new int[61];
    final private JJCalls[] jj_2_rtns = new JJCalls[3];
    private boolean jj_rescan = false;
    private int jj_gc = 0;
    final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    private java.util.Vector jj_expentries = new java.util.Vector();
    private int[] jj_expentry;
    private int jj_kind = -1;
    private int[] jj_lasttokens = new int[100];
    private int jj_endpos;

    public IDLParser()
      {
        this((FastCharStream) null);
      }

    public IDLParser(java.io.Reader reader)
      {
        this(new FastCharStream(reader));
      }

    public IDLParser(CharStream stream)
      {
        token_source = new IDLParserTokenManager(stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;

        for (int i = 0; i < 61; i++)
            jj_la1[i] = -1;

        for (int i = 0; i < jj_2_rtns.length; i++)
            jj_2_rtns[i] = new JJCalls();
      }

    public IDLParser(IDLParserTokenManager tm)
      {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;

        for (int i = 0; i < 61; i++)
            jj_la1[i] = -1;

        for (int i = 0; i < jj_2_rtns.length; i++)
            jj_2_rtns[i] = new JJCalls();
      }

    /* Production 1 */
    final public void specification() throws ParseException
      {
label_1: 
        while (true)
          {
            definition();

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 9:
            case 12:
            case 16:
            case 33:
            case 43:
            case 44:
            case 48:
            case 57:
                ;

                break;

            default:
                jj_la1[0] = jj_gen;

                break label_1;
              }
          }
      }

    /* Production 2 */
    final public void definition() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 33:
        case 43:
        case 44:
        case 48:
            type_dcl();
            jj_consume_token(8);

            break;

        case 16:
            const_dcl();
            jj_consume_token(8);

            break;

        case 57:
            except_dcl();
            jj_consume_token(8);

            break;

        case 12:
            interfacex();
            jj_consume_token(8);

            break;

        case 9:
            module();
            jj_consume_token(8);

            break;

        default:
            jj_la1[1] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 3 */
    final public void module() throws ParseException
      {
        jj_consume_token(9);
        identifier();
        jj_consume_token(10);
label_2: 
        while (true)
          {
            definition();

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 9:
            case 12:
            case 16:
            case 33:
            case 43:
            case 44:
            case 48:
            case 57:
                ;

                break;

            default:
                jj_la1[2] = jj_gen;

                break label_2;
              }
          }

        jj_consume_token(11);
      }

    /* Production 4 */
    final public void interfacex() throws ParseException
      {
        if (jj_2_1(3))
          {
            interface_dcl();
          }
        else
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 12:
                forward_dcl();

                break;

            default:
                jj_la1[3] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
          }
      }

    /* Production 5 */
    final public void interface_dcl() throws ParseException
      {
        interface_header();
        jj_consume_token(10);
        interface_body();
        jj_consume_token(11);
      }

    /* Production 6 */
    final public void forward_dcl() throws ParseException
      {
        jj_consume_token(12);
        identifier();
      }

    /* Production 7 */
    final public void interface_header() throws ParseException
      {
        jj_consume_token(12);
        identifier();

        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 13:
            inheritance_spec();

            break;

        default:
            jj_la1[4] = jj_gen;
            ;
          }
      }

    /* Production 8 */
    final public void interface_body() throws ParseException
      {
label_3: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 15:
            case 16:
            case 33:
            case 34:
            case 35:
            case 36:
            case 37:
            case 38:
            case 39:
            case 40:
            case 41:
            case 42:
            case 43:
            case 44:
            case 48:
            case 52:
            case 55:
            case 56:
            case 57:
            case 58:
            case 59:
            case ID:
                ;

                break;

            default:
                jj_la1[5] = jj_gen;

                break label_3;
              }

            export();
          }
      }

    /* Production 9 */
    final public void export() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 33:
        case 43:
        case 44:
        case 48:
            type_dcl();
            jj_consume_token(8);

            break;

        case 16:
            const_dcl();
            jj_consume_token(8);

            break;

        case 57:
            except_dcl();
            jj_consume_token(8);

            break;

        case 55:
        case 56:
            attr_dcl();
            jj_consume_token(8);

            break;

        case 15:
        case 34:
        case 35:
        case 36:
        case 37:
        case 38:
        case 39:
        case 40:
        case 41:
        case 42:
        case 52:
        case 58:
        case 59:
        case ID:
            op_dcl();
            jj_consume_token(8);

            break;

        default:
            jj_la1[6] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 10 */
    final public void inheritance_spec() throws ParseException
      {
        jj_consume_token(13);
        scoped_name();
label_4: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 14:
                ;

                break;

            default:
                jj_la1[7] = jj_gen;

                break label_4;
              }

            jj_consume_token(14);
            scoped_name();
          }
      }

    /* Production 11 */
    final public void scoped_name() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 15:
            jj_consume_token(15);

            break;

        default:
            jj_la1[8] = jj_gen;
            ;
          }

        identifier();
label_5: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 15:
                ;

                break;

            default:
                jj_la1[9] = jj_gen;

                break label_5;
              }

            jj_consume_token(15);
            identifier();
          }
      }

    /* Production 12 */
    final public void const_dcl() throws ParseException
      {
        jj_consume_token(16);
        const_type();
        identifier();
        jj_consume_token(17);
        const_exp();
      }

    /* Production 13 */
    final public void const_type() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 36:
        case 37:
        case 38:
            integer_type();

            break;

        case 39:
            char_type();

            break;

        case 40:
            boolean_type();

            break;

        case 34:
        case 35:
            floating_pt_type();

            break;

        case 52:
            string_type();

            break;

        case 15:
        case ID:
            scoped_name();

            break;

        default:
            jj_la1[10] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 14 */
    final public void const_exp() throws ParseException
      {
        or_expr();
      }

    /* Production 15 */
    final public void or_expr() throws ParseException
      {
        xor_expr();
label_6: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 18:
                ;

                break;

            default:
                jj_la1[11] = jj_gen;

                break label_6;
              }

            jj_consume_token(18);
            xor_expr();
          }
      }

    /* Production 16 */
    final public void xor_expr() throws ParseException
      {
        and_expr();
label_7: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 19:
                ;

                break;

            default:
                jj_la1[12] = jj_gen;

                break label_7;
              }

            jj_consume_token(19);
            and_expr();
          }
      }

    /* Production 17 */
    final public void and_expr() throws ParseException
      {
        shift_expr();
label_8: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 20:
                ;

                break;

            default:
                jj_la1[13] = jj_gen;

                break label_8;
              }

            jj_consume_token(20);
            shift_expr();
          }
      }

    /* Production 18 */
    final public void shift_expr() throws ParseException
      {
        add_expr();
label_9: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 21:
            case 22:
                ;

                break;

            default:
                jj_la1[14] = jj_gen;

                break label_9;
              }

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 21:
                jj_consume_token(21);

                break;

            case 22:
                jj_consume_token(22);

                break;

            default:
                jj_la1[15] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }

            add_expr();
          }
      }

    /* Production 19 */
    final public void add_expr() throws ParseException
      {
        mult_expr();
label_10: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 23:
            case 24:
                ;

                break;

            default:
                jj_la1[16] = jj_gen;

                break label_10;
              }

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 23:
                jj_consume_token(23);

                break;

            case 24:
                jj_consume_token(24);

                break;

            default:
                jj_la1[17] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }

            mult_expr();
          }
      }

    /* Production 20 */
    final public void mult_expr() throws ParseException
      {
        unary_expr();
label_11: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 25:
            case 26:
            case 27:
                ;

                break;

            default:
                jj_la1[18] = jj_gen;

                break label_11;
              }

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 25:
                jj_consume_token(25);

                break;

            case 26:
                jj_consume_token(26);

                break;

            case 27:
                jj_consume_token(27);

                break;

            default:
                jj_la1[19] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }

            unary_expr();
          }
      }

    /* Production 21 */
    final public void unary_expr() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 23:
        case 24:
        case 28:
            unary_operator();

            break;

        default:
            jj_la1[20] = jj_gen;
            ;
          }

        primary_expr();
      }

    /* Production 22 */
    final public void unary_operator() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 24:
            jj_consume_token(24);

            break;

        case 23:
            jj_consume_token(23);

            break;

        case 28:
            jj_consume_token(28);

            break;

        default:
            jj_la1[21] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 23 */
    final public void primary_expr() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 15:
        case ID:
            scoped_name();

            break;

        case 31:
        case 32:
        case OCTALINT:
        case DECIMALINT:
        case HEXADECIMALINT:
        case FLOATONE:
        case FLOATTWO:
        case CHARACTER:
        case STRING:
            literal();

            break;

        case 29:
            jj_consume_token(29);
            const_exp();
            jj_consume_token(30);

            break;

        default:
            jj_la1[22] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 24 */
    final public void literal() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case OCTALINT:
        case DECIMALINT:
        case HEXADECIMALINT:
            integer_literal();

            break;

        case STRING:
            string_literal();

            break;

        case CHARACTER:
            character_literal();

            break;

        case FLOATONE:
        case FLOATTWO:
            floating_pt_literal();

            break;

        case 31:
        case 32:
            boolean_literal();

            break;

        default:
            jj_la1[23] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 25 */
    final public void boolean_literal() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 31:
            jj_consume_token(31);

            break;

        case 32:
            jj_consume_token(32);

            break;

        default:
            jj_la1[24] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 26 */
    final public void positive_int_const() throws ParseException
      {
        const_exp();
      }

    /* Production 27 */
    final public void type_dcl() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 33:
            jj_consume_token(33);
            type_declarator();

            break;

        case 43:
            struct_type();

            break;

        case 44:
            union_type();

            break;

        case 48:
            enum_type();

            break;

        default:
            jj_la1[25] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 28 */
    final public void type_declarator() throws ParseException
      {
        type_spec();
        declarators();
      }

    /* Production 29 */
    final public void type_spec() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 15:
        case 34:
        case 35:
        case 36:
        case 37:
        case 38:
        case 39:
        case 40:
        case 41:
        case 42:
        case 49:
        case 52:
        case ID:
            simple_type_spec();

            break;

        case 43:
        case 44:
        case 48:
            constr_type_spec();

            break;

        default:
            jj_la1[26] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 30 */
    final public void simple_type_spec() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 34:
        case 35:
        case 36:
        case 37:
        case 38:
        case 39:
        case 40:
        case 41:
        case 42:
            base_type_spec();

            break;

        case 49:
        case 52:
            template_type_spec();

            break;

        case 15:
        case ID:
            scoped_name();

            break;

        default:
            jj_la1[27] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 31 */
    final public void base_type_spec() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 34:
        case 35:
            floating_pt_type();

            break;

        case 36:
        case 37:
        case 38:
            integer_type();

            break;

        case 39:
            char_type();

            break;

        case 40:
            boolean_type();

            break;

        case 41:
            octet_type();

            break;

        case 42:
            any_type();

            break;

        default:
            jj_la1[28] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 32 */
    final public void template_type_spec() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 49:
            sequence_type();

            break;

        case 52:
            string_type();

            break;

        default:
            jj_la1[29] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 33 */
    final public void constr_type_spec() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 43:
            struct_type();

            break;

        case 44:
            union_type();

            break;

        case 48:
            enum_type();

            break;

        default:
            jj_la1[30] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 34 */
    final public void declarators() throws ParseException
      {
        declarator();
label_12: 
        while (true)
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 14:
                ;

                break;

            default:
                jj_la1[31] = jj_gen;

                break label_12;
              }

            jj_consume_token(14);
            declarator();
          }
      }

    /* Production 35 */
    final public void declarator() throws ParseException
      {
        if (jj_2_2(2))
          {
            complex_declarator();
          }
        else
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case ID:
                simple_declarator();

                break;

            default:
                jj_la1[32] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
          }
      }

    /* Production 36 */
    final public void simple_declarator() throws ParseException
      {
        identifier();
      }

    /* Production 37 */
    final public void complex_declarator() throws ParseException
      {
        array_declarator();
      }

    /* Production 38 */
    final public void floating_pt_type() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 34:
            jj_consume_token(34);

            break;

        case 35:
            jj_consume_token(35);

            break;

        default:
            jj_la1[33] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 39 */
    final public void integer_type() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 36:
        case 37:
            signed_int();

            break;

        case 38:
            unsigned_int();

            break;

        default:
            jj_la1[34] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 40 */
    final public void signed_int() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 36:
            signed_long_int();

            break;

        case 37:
            signed_short_int();

            break;

        default:
            jj_la1[35] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 41 */
    final public void signed_long_int() throws ParseException
      {
        jj_consume_token(36);
      }

    /* Production 42 */
    final public void signed_short_int() throws ParseException
      {
        jj_consume_token(37);
      }

    /* Production 43 */
    final public void unsigned_int() throws ParseException
      {
        if (jj_2_3(2))
          {
            unsigned_long_int();
          }
        else
          {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 38:
                unsigned_short_int();

                break;

            default:
                jj_la1[36] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
          }
      }

    /* Production 44 */
    final public void unsigned_long_int() throws ParseException
      {
        jj_consume_token(38);
        jj_consume_token(36);
      }

    /* Production 45 */
    final public void unsigned_short_int() throws ParseException
      {
        jj_consume_token(38);
        jj_consume_token(37);
      }

    /* Production 46 */
    final public void char_type() throws ParseException
      {
        jj_consume_token(39);
      }

    /* Production 47 */
    final public void boolean_type() throws ParseException
      {
        jj_consume_token(40);
      }

    /* Production 48 */
    final public void octet_type() throws ParseException
      {
        jj_consume_token(41);
      }

    /* Production 49 */
    final public void any_type() throws ParseException
      {
        jj_consume_token(42);
      }

    /* Production 50 */
    final public void struct_type() throws ParseException
      {
        jj_consume_token(43);
        identifier();
        jj_consume_token(10);
        member_list();
        jj_consume_token(11);
      }

    /* Production 51 */
    final public void member_list() throws ParseException
      {
label_13: 
        while (true)
          {
            member();

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 15:
            case 34:
            case 35:
            case 36:
            case 37:
            case 38:
            case 39:
            case 40:
            case 41:
            case 42:
            case 43:
            case 44:
            case 48:
            case 49:
            case 52:
            case ID:
                ;

                break;

            default:
                jj_la1[37] = jj_gen;

                break label_13;
              }
          }
      }

    /* Production 52 */
    final public void member() throws ParseException
      {
        type_spec();
        declarators();
        jj_consume_token(8);
      }

    /* Production 53 */
    final public void union_type() throws ParseException
      {
        jj_consume_token(44);
        identifier();
        jj_consume_token(45);
        jj_consume_token(29);
        switch_type_spec();
        jj_consume_token(30);
        jj_consume_token(10);
        switch_body();
        jj_consume_token(11);
      }

    /* Production 54 */
    final public void switch_type_spec() throws ParseException
      {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
          {
        case 36:
        case 37:
        case 38:
            integer_type();

            break;

        case 39:
            char_type();

            break;

        case 40:
            boolean_type();

            break;

        case 48:
            enum_type();

            break;

        case 15:
        case ID:
            scoped_name();

            break;

        default:
            jj_la1[38] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
      }

    /* Production 55 */
    final public void switch_body() throws ParseException
      {
label_14: 
        while (true)
          {
            casex();

            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
              {
            case 46:
            case 47:
                ;

                break;
